[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intempus-report"
version = "0.1.0"
description = "CLI tool to report hours per project from Intempus"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
intempus-report = "intempus_report.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["intempus_report"]
